feat: add styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 1280px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -39,4 +39,28 @@
 
 .read-the-docs {
   color: #888;
+}
+li{
+  list-style: none;
+}
+
+.nav{
+  position: sticky;
+  top: 0;
+  background-color: #fff;
+}
+
+.products{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.products > div > img {
+  width: 200px;
+  height: 200px;
+} 
+
+.products > * {
+  width: 33%;
+  margin-bottom: 24px;
 }
